# draftforge

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DECISIONS.md  HF_CARD.md  Makefile  README.md  SECURITY.md  WRITEUP.md  commitlint.config.js  pyproject.toml  release-notes-v1.4.1.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  docs.yml  feature.yml  feature_request.md  question.yml
.github/workflows/: ci.yml  codeql.yml  stale.yml
ablate/: README.md  __init__.py  compare.py  configs.py  run_ablation.sh
data/: __init__.py  config.py  config.yaml  dedup.py  demo_config.yaml  plot.py  prepare.py  splits.py  tokenize.py  types.py
data/fixtures/: sample_finance.jsonl
data/sources/: __init__.py  edgar.py  finance.py  openhermes.py  sharegpt.py
docs/: GPU_COST_OPTIMIZATION.md
eval/: __init__.py  acceptance.py  crossover_analysis.py  measure_acceptance.py  plot.py
eval/profile/: __init__.py
examples/: README.md  quickstart_acceptance.py  quickstart_data.py  quickstart_serve.py
release/: README.md  __init__.py  __main__.py  aggregate.py  bench.sh  head.placeholder.safetensors  hf_card.md  hf_config.json  make_card.py  training_config.yaml  writeup_template.md
results/: gpu_run_log.md  manifest.json
results/ablation/: comparison.csv  comparison.json
results/eval/: acceptance_grid.csv  acceptance_measured_0.json  acceptance_measured_1234.json  acceptance_measured_42.json
scripts/: onboard_pod.sh  operator_runpod.py  run_demo.py  run_full_pipeline.sh  upload_hf.sh  verify.sh
serve/: README.md  __init__.py  bench.py  bench.sh  integrate.py  profile.py
tests/: __init__.py  conftest.py  test_demo_pipeline.py  test_onboard_pod_v13.py  test_operator_runpod.py  test_operator_runpod_v13.py
tests/ablate/: __init__.py  test_compare.py  test_configs.py
tests/data/: __init__.py  test_config.py  test_dedup.py  test_prepare.py  test_sources.py  test_splits.py  test_tokenize.py
tests/eval/: __init__.py  test_acceptance.py  test_crossover_analysis.py  test_plot.py
tests/release/: __init__.py  test_aggregate.py  test_main.py  test_make_card.py  test_release_consistency.py  test_release_provenance.py
tests/serve/: __init__.py  test_integration.py  test_profile.py
train/: README.md  __init__.py  config.py  config.yaml  config_smoke.yaml  ds_config.json  head.py  layer_indices.py  packing.py  run_all_seeds.sh  run_concurrent_seeds.sh  train_eagle3.py
(+23 files in other folders)
